# cupapp2

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cupapp2/: manage.py
cupapp2/cupapp/: admin.py  apps.py  core.py  forms.py  models.py  tests.py  views.py
cupapp2/cupapp/migrations/: 0001_initial.py  0002_auto_20181121_2342.py  0003_auto_20181129_2247.py  0004_auto_20190106_1255.py  0005_auto_20210403_1333.py  0006_alter_fixture_id_alter_fixtureplayer_id_and_more.py
cupapp2/cupapp2/: settings.py  urls.py  wsgi.py
cupapp2/logger/: logging.py  logging.yaml
cupapp2/templates/cupapp/: base.html  cup.html  cups.html  home.html  login.html  nav.html  newcup.html
cupapp2/tests/: test_admin.py  test_core.py
